0.5.3 - "hairball full of bugs"

* After timeouted connect, miau no longer freezes until send() times out.
  How did I do this - after adding the timer?-)

* Only one error message after connecting timed out.

* No more skipping one server after connecting timed out.

* Automatically generated logfilenames are now always in lower case.

* miau now leaves channels (if configured to do so) when client times out and
  when client dropped connection.

* Fixed handling of event-messages when "leave" is set to true.

* Fixed memory-leak in chanlog_open(...). This occured only if global logtype
  failed to open logfile for writing.

* Fixed proceed_timer_safe -- it was possible to make it never trigger return
  code 2.


0.5.2 - "fluffy little fellow"

* Fixed a bug that caused miau to segfault on rehash if bind was defined while
  listenhost was not.

* Message for dropping new client no longer contains garbage. Funny thing that
  neither valgrind nor electric fence caught this.

* Rehashing now complains about all missing and required items.

* Implemented timestamping for quicklog events (QLOGSTAMP).
  Option in miaurc: "timestamp", defines location of timestamp in quicklog
  events. May be one of "beginning", "end", or "none".

* Implemented channel logging like logging for private messages (PRIVLOG).
  Channel log is now CHANLOG. "log" in miaurc is now "chanlog".

* Logging finally handles "\1ACTION ...\1"s properly.

* "getnick" option (in miaurc) now takes "never", "detached", "attached" and
  "always" as an argument.

* Increased buffersize for error() and report(). Even server-error/kill should
  now fit in it.

* Split log.[ch] into log.[ch], chanlog.[ch] and privlog.[ch].

* Some parts of parser.c rewritten.

* Improved dump_status() :-)

* Code-cleanup.


0.5.1 - "y2k-compatible"

* Quitting miau resulted in deadlock when logging was compiled in but not
  defined in miaurc. Fixed.

* miau no longer tries to join channels when not connected.