@@ -4,9 +4,6 @@ Bugs:
   client to join this channel. The problem is that user is _not_ on this
   channel.
 
-- If channels are defined, leave and rejoin are set to true, miau joins
-  channels at startup although it should not.
-
 - irc.c/irc_write_real() { send() } may lock up if rehashed while connecting
 
 - Fails silently if cannot write into ~/.miau/log
